load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

# gazelle:prefix github.com/zalgonoise/x/dns
gazelle(name = "gazelle")

buildifier(name = "buildifier")

buildifier(
    name = "buildifier-check",
    lint_mode = "warn",
    mode = "check",
    multi_diff = True,
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
    multi_diff = True,
)

load("@com_github_atlassian_bazel_tools//golangcilint:def.bzl", "golangcilint")
golangcilint(
    name = "lint",
    paths = [
        "./...",
    ],
    prefix = "github.com/zalgonoise/x/dns",
)


go_library(
    name = "dns_lib",
    srcs = ["main.go"],
    importpath = "github.com/zalgonoise/x/dns",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "dns",
    embed = [":dns_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "latest",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/dns"],
    files = [":dns"],
    repository = "zalgonoise/x/dns",
    user = "dns",
)
