load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "core.go",
        "dns.go",
    ],
    importpath = "github.com/zalgonoise/x/dns/dns/core",
    visibility = ["//visibility:public"],
    deps = [
        "//dns",
        "//store",
        "@com_github_miekg_dns//:dns",
    ],
)

go_test(
    name = "core_test",
    srcs = [
        "core_test.go",
        "dns_test.go",
    ],
    embed = [":core"],
    deps = [
        "//store",
        "@com_github_miekg_dns//:dns",
    ],
)
