load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "simplehealth",
    srcs = ["simple.go"],
    importpath = "github.com/zalgonoise/x/dns/health/simplehealth",
    visibility = ["//visibility:public"],
    deps = [
        "//health",
        "//store",
        "@com_github_miekg_dns//:dns",
    ],
)

go_test(
    name = "simplehealth_test",
    srcs = ["simple_test.go"],
    embed = [":simplehealth"],
    deps = [
        "//health",
        "//store",
    ],
)
