load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["transport_test.go"],
    deps = [
        "//health",
        "//store",
        "//transport/httpapi",
        "@com_github_miekg_dns//:dns",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
    ],
)
